--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -9,7 +9,7 @@ set_chat_lang: "Great, {} it is from now on!"
 
 
 pm_start_text: |
-   Hi {}, I'm {},
+   Hi {}, I'm Erica,
    I am an Anime themed group management bot with some fun extras ;)
    
    I can do a variety of things, most common of em are:
@@ -25,22 +25,21 @@ pm_start_text: |
    
    *Click on help to learn more!*
    
-grp_start_text: "Hi, I'm Kigyo."
+grp_start_text: "Hi, I'm Erica."
 
 pm_help_text: |
-   Hello there! My name is *Kigyo*. A part of *Eagle Union*.
-   I'm a modular group management bot with a few fun extras! Have a look at the following for an idea of some of
+Take a look at the following for an idea of some of
    the things I can help you with.
    *Main* commands available:
     • /start: Starts me, can be used to check I'm alive or not.
     • /help: PM's you this message.
-    • /language: Change bot language.
+    • /lang: Change bot language.
     • /settings:
       - in PM: will send you your settings for all supported modules.
       - in a group: will redirect you to pm, with all that chat's settings.
     Click on the buttons below to get documentation about specific modules!
 
-add_bot_to_group_btn: "Add Kigyo"
+add_bot_to_group_btn: "Add Me To Ur Chat"
 support_chat_link_btn: "Support"
 updates_channel_link_btn: "Updates"
 src_btn: "Source code"
