--- a/ERICA/langs/jp.yaml
+++ b/ERICA/langs/jp.yaml
@@ -13,20 +13,16 @@ pm_start_text: |
    私はアニメをテーマにしたグループ管理ボットで、楽しい機能がいくつかあります;）
 
    使用可能なコマンドのリストは /help で見つけることができます。
-grp_start_text: 「こんにちは、キギョです。」
+grp_start_text: エリカがいるね
 
 pm_help_text: |
-   Hello there! My name is *Kigyo*. A part of *Eagle Union*.
-   I'm a modular group management bot with a few fun extras! Have a look at the following for an idea of some of
-   the things I can help you with.
-   *Main* commands available:
-    • /start: Starts me, can be used to check I'm alive or not.
-    • /help: PM's you this message.
-    • /language: Change bot language.
+いくつかのアイデアについては、以下を見てください 私があなたを助けることができるもの.
+   *利用可能なメイン*コマンド:
+    • /start: 私を開始し、私が生きているかどうかを確認するために使用することができます.
+    • /help: PMはあなたにこのメッセージです.
+    • /lang: ボットの言語を変更する.
     • /settings:
-      - in PM: will send you your settings for all supported modules.
-      - in a group: will redirect you to pm, with all that chat's settings.
-    Click on the buttons below to get documentation about specific modules!
+      - PM：サポートされているすべてのモジュールの設定が送信されます。 -グループ内：チャットのすべての設定を使用して、午後にリダイレクトします。 下のボタンをクリックして、特定のモジュールに関するドキュメントを入手してください!
 
 add_bot_to_group_btn:  "私を追加してください"
 support_chat_link_btn:  "サポート"
