--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -28,7 +28,8 @@ pm_start_text: |
 grp_start_text: "Hi, I'm Erica."
 
 pm_help_text: |
-Take a look at the following for an idea of some of
+Hello there! My name is *Kigyo*. A part of *Eagle Union*.
+   I'm a modular group management bot with a few fun extras! Have a look at the following for an idea of some of
    the things I can help you with.
    *Main* commands available:
     • /start: Starts me, can be used to check I'm alive or not.
