--- a/ERICA/langs/jp.yaml
+++ b/ERICA/langs/jp.yaml
@@ -17,7 +17,7 @@ grp_start_text: エリカがいるね
 
 pm_help_text: |
 いくつかのアイデアについては、以下を見てください 私があなたを助けることができるもの.
-   *利用可能なメイン*コマンド:
+   *利用可能なメイン*コマンド
     • /start: 私を開始し、私が生きているかどうかを確認するために使用することができます.
     • /help: PMはあなたにこのメッセージです.
     • /lang: ボットの言語を変更する.
