--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -34,7 +34,7 @@ pm_help_text: |
 add_bot_to_group_btn: "Add Me To Ur Chat"
 support_chat_link_btn: "Support"
 updates_channel_link_btn: "Updates"
-src_btn: "Source code"
+src_btn: "Devlopers ✅"
 
 admin_help: |
    • `/admins`*:* list of admins in the chat
