--- a/ERICA/langs/hi.yaml
+++ b/ERICA/langs/hi.yaml
@@ -39,7 +39,7 @@ src_btn: "Devlopers"
 admin_help: |
 •   `/admins`*:* चैट में व्यवस्थापकों की सूची
 
-     *केवल व्यवस्थापक*':
+     *केवल व्यवस्थापक*:
     • `/pin`*:* उत्तर दिए गए संदेश को चुपचाप पिन करता है - उपयोगकर्ताओं को सूचनाएं देने के लिए `'ज़ोर' या `'सूचित करें' जोड़ें।
     • `/unpin`*:* वर्तमान में पिन किए गए संदेश को अनपिन करता है
     • `/invitelink`*:* आमंत्रण लिंक प्राप्त करता है
@@ -48,7 +48,7 @@ admin_help: |
     • `/tittle <tittle here>`*:* उस व्यवस्थापक के लिए एक कस्टम शीर्षक सेट करता है जिसे बॉट ने बढ़ावा दिया था
 
 afk_help: |
-   - /afk <कारण>: अपने आप को AFK (कीबोर्ड से दूर) के रूप में चिह्नित करें।
+    - /afk <कारण>: अपने आप को AFK (कीबोर्ड से दूर) के रूप में चिह्नित करें।
     - brb <कारण>: afk कमांड के समान - लेकिन कमांड नहीं।
     जब AFK के रूप में चिह्नित किया जाता है, तो किसी भी उल्लेख का उत्तर एक संदेश के साथ दिया जाएगा कि आप उपलब्ध नहीं हैं!
 
