--- a/ERICA/langs/jp.yaml
+++ b/ERICA/langs/jp.yaml
@@ -24,10 +24,12 @@ pm_help_text: |
     • /settings:
       - PM：サポートされているすべてのモジュールの設定が送信されます。 -グループ内：チャットのすべての設定を使用して、午後にリダイレクトします。 下のボタンをクリックして、特定のモジュールに関するドキュメントを入手してください!
 
-add_bot_to_group_btn:  "私を追加してください"
-support_chat_link_btn:  "Support"
-updates_channel_link_btn: "更新"
-src_btn:  "Devlopers ✅"
+add_bot_to_group_btn: "Add Me To Ur Chat"
+support_chat_link_btn: "Support"
+updates_channel_link_btn: "Updates"
+devs_btn: "Devlopers ✅"
+src_btn: "Donate 💰"
+helper_btn: "Help And Commands"
 
 admin_help: |
    • `/admins`*:* list of admins in the chat
