--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -9,33 +9,30 @@ set_chat_lang: "Great, {} it is from now on!"
 
 
 pm_start_text: |
-   Hi {}, I'm Erica,
-   I am an Anime themed group management bot with some fun extras ;)
+   Hi {}
+   I am an Simple group management bot with some fun extra Features
    
    I can do a variety of things, most common of em are:
    - Restrict users with *ban permissions*.
    - Greet users with media + text and buttons, with proper formatting.
    - Restrict users who flood your chat using my *anti-flood* module.
    - *Warn* users according to the options set and restrict em accordingly.
-   - Save notes and filters with proper formatting and reply markup.
+   - Save notes and filters with proper formatting and reply markup etc..
    
-   Theres even more! this is just the tip of the iceberg. Do note I need
-   to be promoted with proper admin permissions to function properly. 
-   Else I won't be able to function as said.
-   Type /lang To Change The Bot Language
+   There are lots of Features Add Me To your Group And Enjoy.
    
    *Click on help to learn more!*
    
-grp_start_text: "Hi, I'm Erica."
+grp_start_text: "Hello, I'M Alive"
 
 pm_help_text: |
-   Here Is The all Modules Click On Buttons To Read Commands Details ✅
+   Click On The Buttons To Check Datails and Commands Of The Modules.. 
 
-add_bot_to_group_btn: "Add Me To Ur Chat"
+add_bot_to_group_btn: "Add Me To Your Chat"
 support_chat_link_btn: "Support"
 updates_channel_link_btn: "Updates"
 devs_btn: "Devlopers ✅"
-src_btn: "Donate 💰"
+chat_btn: "Donate 💰"
 helper_btn: "Help And Commands"
 
 admin_help: |
@@ -204,7 +201,7 @@ FED_USER_HELP: |
     • `/frules`*:* See Federation regulations
 
 formt_help_bse: |
-    Kigyo supports a large number of formatting options to make your messages more expressive. Take a look!
+    supports a large number of formatting options to make your messages more expressive. Take a look!
 
 md_help: |
     <b>Markdown Formatting</b>
