--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -10,9 +10,9 @@ set_chat_lang: "Great, {} it is from now on!"
 
 pm_start_text: |
    *Hello {} !*
-  ───────────────────────
-I am an Anime themed group management bot with some fun extras:
-  I can do a variety of things, most common of em are:
+  ──────────────────────:
+  I am an Anime themed group management bot with some fun extras
+  I can do a variety of things, most common of em are
   - Restrict users with ban permissions.
   - Greet users with media + text and buttons, with proper formatting.
   - Restrict users who flood your chat using my anti-flood module.
