--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -9,9 +9,9 @@ set_chat_lang: "Great, {} it is from now on!"
 
 
 pm_start_text: |
-   Hi {}, I'm Zaid,
+   Hi {},
    ───────────────────────
-   I am an Anime themed group management bot with some fun extras ;)
+   I am an group management bot with some fun extras ;)
    
    I can do a variety of things, most common of em are:
    - Restrict users with *ban permissions*.
@@ -20,6 +20,7 @@ pm_start_text: |
    - *Warn* users according to the options set and restrict em accordingly.
    - Save notes and filters with proper formatting and reply markup.
    - I can Play Music Too In Ur Groups
+   - I have many features Which u Like thats
    
    Theres even more! this is just the tip of the iceberg. Do note I need
    to be promoted with proper admin permissions to function properly. 
