--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -496,3 +496,8 @@ sg_help: |
        This Commands Can Find Anyone Name History
          ❂ `/sg`: To Search Name/Username History
 
+
+memefy_help: |
+       Memefy Any Stickers / Type on a Sticker text
+         ❂ `/mmf`: Reply With A Sticker
+
