--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -501,3 +501,7 @@ memefy_help: |
        Memefy Any Stickers / Type on a Sticker text
          ❂ `/mmf`: Reply With A Sticker
 
+tele_help: |
+       These Commands for make Url/Upload on Telegraph
+         ❂ `/tgm`: Reply With Media
+         ❂ `/tgt`: Reply With Text Message 
