--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -352,7 +352,6 @@ misc_help: |
       • /cash : currency converter
         example syntax: /cash 1 USD INR
       • /getid : get IDs of chat, user and chat message.
-      • /spbinfo : get info about a user from @Intellivoid's SpamProtection API
       ~~~~~~
       *Last.FM*
       Share what you're what listening to with the help of this module!
@@ -365,8 +364,8 @@ misc_help: |
       Tired of telegram's stupidity? well here you go
       *Available commands:*
       • /antichannel <on/off>: Bans and deletes anyone who tries to talk as channel and forces em to talk as themselves
-      • /antilinkedchan <on/off>: Makes Kigyo automatically delete linked channel posts from chatroom
-      • /antichannelpin <on/off>: Makes Kigyo automatically unpin linked channel posts from chatroom
+      • /antilinkedchan <on/off>: Makes automatically delete linked channel posts from chatroom
+      • /antichannelpin <on/off>: Makes automatically unpin linked channel posts from chatroom
 
 muting_help: |
       *Admins only:*
