--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -509,3 +509,9 @@ tele_help: |
 meme_help: |
        This Modules for fun /memes 
          ❂ `/rmeme`: it will send random Memes 
+
+
+night_help: |
+       Note: Night Mode chats get Automatically closed at 12pm(IST)
+         and Automatically openned at 6am(INDIAN STANDARD TIME ZONE) To Prevent Night Spams.
+         ❂ `/nightmode`: on/off
