--- a/ERICA/langs/Hindi.yaml
+++ b/ERICA/langs/Hindi.yaml
@@ -1,32 +1,32 @@
 # Language name in their native
-language: "English 🇺🇲"
+language: "हिन्दी 🇮🇳"
 # name of people(s) who worked on this translation
-authors: "@dank_as_fuck"
+authors: "@Timesisnotwaiting"
 
 # languages
-curr_chat_lang: "Hey. Your current language is {}, select the one you want from the buttons below :)"
-set_chat_lang: "Great, {} it is from now on!"
+curr_chat_lang: "अरे। आपकी वर्तमान भाषा {} है, नीचे दिए गए बटन से अपनी पसंद का भाषा चुनें :)"
+set_chat_lang: "बढ़िया, {} यह अभी से है!"
 
 
 pm_start_text: |
-   Hi {},
+   नमस्ते {},
    ───────────────────────
-   I am an group management bot with some fun extras ;)
+   मैं कुछ मजेदार एक्स्ट्रा के साथ एक समूह प्रबंधन बॉट हूं;)
    
-   I can do a variety of things, most common of em are:
-   - Restrict users with *ban permissions*.
-   - Greet users with media + text and buttons, with proper formatting.
-   - Restrict users who flood your chat using my *anti-flood* module.
-   - *Warn* users according to the options set and restrict em accordingly.
-   - Save notes and filters with proper formatting and reply markup.
-   - I can Play Music Too In Ur Groups
-   - I have many features Which u Like thats
+    मैं कई तरह की चीजें कर सकता हूं, उनमें से सबसे आम हैं:
+    - *प्रतिबंध अनुमतियों* वाले उपयोगकर्ताओं को प्रतिबंधित करें।
+    - उचित स्वरूपण के साथ मीडिया + टेक्स्ट और बटन के साथ उपयोगकर्ताओं का अभिवादन करें।
+    - मेरे *बाढ़ विरोधी* मॉड्यूल का उपयोग करके आपकी चैट में बाढ़ लाने वाले उपयोगकर्ताओं को प्रतिबंधित करें।
+    - *चेतावनी* उपयोगकर्ताओं को सेट किए गए विकल्पों के अनुसार और तदनुसार उन्हें प्रतिबंधित करें।
+    - उचित स्वरूपण और उत्तर मार्कअप के साथ नोट्स और फ़िल्टर सहेजें।
+    - मैं उर समूहों में भी संगीत चला सकता हूं
+    - मेरे पास कई विशेषताएं हैं जो आपको पसंद हैं
    
-   Theres even more! this is just the tip of the iceberg. Do note I need
-   to be promoted with proper admin permissions to function properly. 
-   Else I won't be able to function as said.
+    और भी है! यह केवल एक ऊपरी हिस्सा है। ध्यान दें मुझे चाहिए
+    ठीक से काम करने के लिए उचित व्यवस्थापक अनुमतियों के साथ प्रचारित किया जाना है।
+    वरना मैं कहे अनुसार काम नहीं कर पाऊंगा.
    ───────────────────────
-   Click on help to learn more!
+   अधिक जानने के लिए सहायता पर क्लिक करें!
 
    
 grp_start_text: "Hello, Zaid Is Alive"
