--- a/ERICA/langs/Hindi.yaml
+++ b/ERICA/langs/Hindi.yaml
@@ -13,26 +13,26 @@ pm_start_text: |
    ───────────────────────
    मैं कुछ मजेदार एक्स्ट्रा के साथ एक समूह प्रबंधन बॉट हूं;)
    
-    मैं कई तरह की चीजें कर सकता हूं, उनमें से सबसे आम हैं:
-    - *प्रतिबंध अनुमतियों* वाले उपयोगकर्ताओं को प्रतिबंधित करें।
-    - उचित स्वरूपण के साथ मीडिया + टेक्स्ट और बटन के साथ उपयोगकर्ताओं का अभिवादन करें।
-    - मेरे *बाढ़ विरोधी* मॉड्यूल का उपयोग करके आपकी चैट में बाढ़ लाने वाले उपयोगकर्ताओं को प्रतिबंधित करें।
-    - *चेतावनी* उपयोगकर्ताओं को सेट किए गए विकल्पों के अनुसार और तदनुसार उन्हें प्रतिबंधित करें।
-    - उचित स्वरूपण और उत्तर मार्कअप के साथ नोट्स और फ़िल्टर सहेजें।
-    - मैं उर समूहों में भी संगीत चला सकता हूं
-    - मेरे पास कई विशेषताएं हैं जो आपको पसंद हैं
+   मैं कई तरह की चीजें कर सकता हूं, उनमें से सबसे आम हैं:
+   - *प्रतिबंध अनुमतियों* वाले उपयोगकर्ताओं को प्रतिबंधित करें।
+   - उचित स्वरूपण के साथ मीडिया + टेक्स्ट और बटन के साथ उपयोगकर्ताओं का अभिवादन करें।
+   - मेरे *बाढ़ विरोधी* मॉड्यूल का उपयोग करके आपकी चैट में बाढ़ लाने वाले उपयोगकर्ताओं को प्रतिबंधित करें।
+   - *चेतावनी* उपयोगकर्ताओं को सेट किए गए विकल्पों के अनुसार और तदनुसार उन्हें प्रतिबंधित करें।
+   - उचित स्वरूपण और उत्तर मार्कअप के साथ नोट्स और फ़िल्टर सहेजें।
+   - मैं उर समूहों में भी संगीत चला सकता हूं
+   - मेरे पास कई विशेषताएं हैं जो आपको पसंद हैं
    
-    और भी है! यह केवल एक ऊपरी हिस्सा है। ध्यान दें मुझे चाहिए
-    ठीक से काम करने के लिए उचित व्यवस्थापक अनुमतियों के साथ प्रचारित किया जाना है।
-    वरना मैं कहे अनुसार काम नहीं कर पाऊंगा.
+   और भी है! यह केवल एक ऊपरी हिस्सा है। ध्यान दें मुझे चाहिए
+   ठीक से काम करने के लिए उचित व्यवस्थापक अनुमतियों के साथ प्रचारित किया जाना है।
+   वरना मैं कहे अनुसार काम नहीं कर पाऊंगा.
    ───────────────────────
    अधिक जानने के लिए सहायता पर क्लिक करें!
 
    
-grp_start_text: "Hello, Zaid Is Alive"
+grp_start_text: "हैलो, ज़ैद जाग रहा है"
 
 pm_help_text: |
-   ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴꜱ ᴛᴏ ᴄʜᴇᴄᴋ ᴅᴀᴛᴀɪʟꜱ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅꜱ ᴏꜰ ᴛʜᴇ ᴍᴏᴅᴜʟᴇꜱ.
+   इन मॉड्यूल के विवरण और कमांड की जांच करने के लिए बटन पर क्लिक करें.
 
 add_bot_to_group_btn: "Add Me To Your Chat"
 support_chat_link_btn: "Support"
