--- a/ERICA/langs/en.yaml
+++ b/ERICA/langs/en.yaml
@@ -21,6 +21,7 @@ pm_start_text: |
    - Save notes and filters with proper formatting and reply markup.
    - I can Play Music Too In Ur Groups
    - I have many features Which u Like thats
+   - Try /setlang to Change The Bot language (Note Currently is English Supported)
    
    Theres even more! this is just the tip of the iceberg. Do note I need
    to be promoted with proper admin permissions to function properly. 
